--- a/page-11chisquared.html
+++ b/page-11chisquared.html
@@ -380,7 +380,7 @@ div.tocify {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Material</li>
     <li>
-      <a href="page-q1_materials.html">Videos und Übungsdatensätze</a>
+      <a href="page-q1_materials.html">Videos, Übungsdatensätze und Zusatzmaterial</a>
     </li>
     <li class="divider"></li>
     <li class="divider"></li>
@@ -611,7 +611,7 @@ div.tocify {
 <p><img src="images/q1_11nominal/vacc_eff.PNG" /></p>
 <p></br></p>
 <p>Zur Logik hinter dieser Formel, unten zunächst eine Animation, mit der Sie ein sehr gemeines Experiment simulieren können. Stellen Sie sich vor, dass erforscht werden soll, wie gut ein neuer Impfstoff vor einer tödlichen Infektionskrankheit schützt. Dazu soll zunächst ein Tierexperiment durchgeführt werden, bei dem eine Gruppe von Versuchsmäusen geimpft wird, während die andere nur eine Placebobehandlung bekommt.</p>
-<p><br /> <iframe width="900" height="700" src="https://anonymousforblindrev.github.io/singularprevention/stimuli/Prev_0_120_60_60.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br /> <br /></p>
+<p><br /> <iframe width="900" height="700" src="https://simonstephan31.github.io/singular_prevention_proceedings/stimuli/Prev_0_120_60_60.html" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br /> <br /></p>
 <p>Links sehen Sie eine Stichprobe von Versuchsmäusen, die geimpft wurden. Rechts die Placebogruppe. Durch Drücken auf “Start” können Sie nun beide Gruppen dem gefährlichen Virus aussetzen. Sie können dann beobachten, wie viele Mäuse in jeder Gruppe erkranken.</p>
 <p>Die Animation zeigt, dass in diesem Fall keine der geimpften Mäuse erkrankt aber die Hälfte der Placebogruppe. Fragen Sie sich: Wie groß ist in diesem Fall die Phi-Korrelation? Erstellen Sie sich ggf. eine Vierfeldertafel in Excel mit den Ergebnissen der Animation. Wie groß ist die Risiko-Differenz bzw. Risiko-Reduktion? Welche Impfeffektivität ergibt sich stattdessen?</p>
 <p>Die Formel oben ergibt eine Impfeffektivität von 100%. Welche Logik fängt diese Formel ein, die die Risikodifferenz und auch die Phikorrelation nicht einfängt? Stellen Sie sich vor, wie viele Fälle in der Impfgruppe aufgetreten wären, wenn diese gar nicht geimpft worden wäre. Was wäre der Erwartungswert? Wir würden erwarten, dass sich dann auch in dieser Gruppe die Hälfte der Individuen infiziert. Die andere Hälfte - diejenigen, die sowieso uninfiziert bleiben - sind für die Wirksamkeit des Impfstoffs somit gar nicht diagnostisch. Wie viele Fälle wurden daher in Anwesenheit des Impfstoffs verhindert? Antwort: 100% der Fälle, die ohne die Impfung erwartungsgemäß aufgetreten wären. Das ist, was die Formel berechnet.</p>
