--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -13,6 +13,7 @@
 
 <title>Materialien für Quantitative Methoden I</title>
 
+<script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/united.min.css" rel="stylesheet" />
@@ -565,6 +566,12 @@ body {
 <h4>Zusatzaufgaben zum Rechnen</h4>
 <ul>
 <li>die Excel-Files mit diversen weiteren Übungsaufgaben gibt es in einem ZIP-Folder zum Download <a href="q1_dataFiles/Zusatzuebungen.zip">hier</a>.</li>
+</ul>
+</div>
+<div id="demo-histogramme" class="section level4">
+<h4>Demo Histogramme</h4>
+<ul>
+<li><a href="q1_dataFiles/Zusatz_Histogramme.xlsx">Hier</a> gibt es nochmal eine Übersicht über die verschiedenen Möglichkeiten, Histogramme zu erstellen.</li>
 </ul>
 </div>
 <div id="formelsammlung" class="section level4">
