--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -380,7 +380,7 @@ div.tocify {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Material</li>
     <li>
-      <a href="page-q1_materials.html">Videos und Übungsdatensätze</a>
+      <a href="page-q1_materials.html">Videos, Übungsdatensätze und Zusatzmaterial</a>
     </li>
     <li class="divider"></li>
     <li class="divider"></li>
@@ -656,6 +656,7 @@ body {
 <h1><span class="header-section-number">2</span> Sitzung 2: Wiederholung deskriptive Statistik, Abbildung, t-Tests</h1>
 <ul>
 <li>Begleitendes R-Skript: <a href="q2_html_pages/Wiederholung1.html">Sitzung 2: Skript zu Video Teil 1 und 2</a></li>
+<li>Die zum Skript gehörende R-Markdown-Dateien gibt es <a href="q2_dataFiles/Markdowns/Sitzung_02_RMarkdown.zip">hier</a> als ZIP-Ordner</li>
 <li>Anzahl Videos: 2</li>
 <li>Das im Video angesprochene PDF gibt es <a href="q2_dataFiles/02_Einführung_R_SoSe21_Teil1.pdf">hier</a> und natürlich auch in stud.ip</li>
 </ul>
@@ -720,6 +721,7 @@ body {
 <h1><span class="header-section-number">3</span> Sitzung 3: Daten transformieren, weitere Abbildungen, Korrelationen, Rang- und Chi-Quadrat-Test</h1>
 <ul>
 <li><p>Begleitende R-Skripts: 2</p></li>
+<li><p>Die zum Skript gehörende R-Markdown-Dateien (Sitzung 3a und 3b) gibt es <a href="q2_dataFiles/Markdowns/Sitzung_03_RMarkdown.zip">hier</a> als ZIP-Ordner</p></li>
 <li><p>Anzahl Videos: 2</p></li>
 </ul>
 <div id="teil-1-1" class="section level2">
