--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -830,6 +830,7 @@ body {
 <h1><span class="header-section-number">4</span> Sitzung 4: Multiple Regressionsanalyse I und II</h1>
 <ul>
 <li><p>Begleitende R-Skripts: 2</p></li>
+<li><p>Die zum Skript gehörende R-Markdown-Dateien (Teil 1 und Teil 2) gibt es <a href="q2_dataFiles/Markdowns/Sitzung_04_RMarkdown.zip">hier</a> als ZIP-Ordner</p></li>
 <li><p>Anzahl Videos: 2</p></li>
 <li><p>Benötigte Datensätze: 2</p></li>
 </ul>
