--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -942,6 +942,7 @@ body {
 <h1><span class="header-section-number">5</span> Sitzung 5: Multiple Regressionsanalyse III (Prüfung Annahmen)</h1>
 <ul>
 <li><p>Begleitende R-Skripts: 1, das gibt es <a href="q2_html_pages/Sitzung5a_Annahmen.html">hier</a></p></li>
+<li><p>Die zum Skript gehörende R-Markdown-Dateien (Haupt- plus Zusatzaufgabe) gibt es <a href="q2_dataFiles/Markdowns/Sitzung_05_RMarkdown.zip">hier</a> als ZIP-Ordner</p></li>
 <li><p>Anzahl Videos: 1 (Dauer ca. 66 min), zum Video geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1589892041573">hier</a></p></li>
 <li><p>Benötigte Datensätze: 1, den gibt es <a href="q2_dataFiles/Daten_Pruefungsleistung_Annahmen.csv">hier</a></p></li>
 </ul>
