--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -820,6 +820,10 @@ body {
 </ul></li>
 </ul>
 <p><br></p>
+<ul>
+<li><strong>Selber üben</strong>: Ein R-Markdown-Script mit Aufgaben zum weiteren Üben finden Sie <a href="q2_dataFiles/Markdowns/Sitzung3_selber_ueben.Rmd">hier</a>. Die Lösung folgt später.</li>
+</ul>
+<p><br></p>
 <h2>
 <font style="color:lightgrey;"> Inhalte aus Quanti II </font>
 </h1>
