--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -821,7 +821,7 @@ body {
 </ul>
 <p><br></p>
 <ul>
-<li><strong>Selber üben</strong>: Ein R-Markdown-Script mit Aufgaben zum weiteren Üben finden Sie <a href="q2_dataFiles/Markdowns/Sitzung3_selber_ueben.Rmd">hier</a>. Die Lösung folgt später.</li>
+<li><strong>Selber üben</strong>: Ein R-Markdown-Script mit Aufgaben zum weiteren Üben finden Sie <a href="q2_dataFiles/Markdowns/Sitzung_03_selber_ueben.zip">hier</a>. Die Lösung folgt später.</li>
 </ul>
 <p><br></p>
 <h2>
