update sitzung3 loesung

--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -821,7 +821,8 @@ body {
 </ul>
 <p><br></p>
 <ul>
-<li><strong>Selber üben</strong>: Ein R-Markdown-Script mit Aufgaben zum weiteren Üben finden Sie <a href="q2_dataFiles/Markdowns/Sitzung_03_selber_ueben.zip">hier</a>. Die Lösung folgt später.</li>
+<li><p><strong>Selber üben</strong>: Ein R-Markdown-Script mit Aufgaben zum weiteren Üben finden Sie <a href="q2_dataFiles/Markdowns/Sitzung_03_selber_ueben.zip">hier</a>. Die Lösung folgt später.</p></li>
+<li><p>Die Datei mit der Lösung ist jetzt <a href="q2_dataFiles/Markdowns/Sitzung3_selber_ueben_loesung.zip">hier</a>.</p></li>
 </ul>
 <p><br></p>
 <h2>
