--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -1040,7 +1040,8 @@ body {
 <div id="zusatz-zum-eigenständigen-üben-3" class="section level2">
 <h2><span class="header-section-number">6.1</span> Zusatz zum eigenständigen Üben</h2>
 <ul>
-<li>Im Video führen wir die ANOVA nur für “Tag 1” des Festivals durch. Es gibt aber auch Daten für “Tag 3”. Dafür können Sie die Analyse selbständig machen. Zur Not finden sie das Script aber auch weiter unten im begleitenden und oben angegeben HTML-Script.</li>
+<li><p>Im Video führen wir die ANOVA nur für “Tag 1” des Festivals durch. Es gibt aber auch Daten für “Tag 3”. Dafür können Sie die Analyse selbständig machen. Zur Not finden sie das Script aber auch weiter unten im begleitenden und oben angegeben HTML-Script.</p></li>
+<li><p>Zum Üben in den Übungen am Dienstag: R-Markdown-Dateien mit Aufgaben gibt es <a href="q2_dataFiles/Markdowns/Sitzung_06_RMarkdown_Aufg.zip">hier</a> als ZIP-Ordner. Die Lösungsdateien folgen später <a href="">hier</a>.</p></li>
 </ul>
 <p><br></p>
 </div>
