--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -1046,6 +1046,15 @@ body {
 <p><br></p>
 </div>
 </div>
+<div id="zwischensitzung-pfingstwoche-bisheriges-vertiefen" class="section level1 unnumbered">
+<h1>Zwischensitzung Pfingstwoche: Bisheriges vertiefen</h1>
+<p>In dieser Woche ist Zeit für zusätzliche Übungen. Eine gute Möglichkeit dafür sind die in R bereits integrierten Datensätze.</p>
+<p>Um zu sehen, welche Datensätze es in R gibt, tippt man einfach “data()” in die Console (oder in einen Code-Chunk).</p>
+<p>Um dann für einen der unzähligen Datensätze zu sehen, was sich dahinter verbirgt, tippt man einfach “?NAME_DATENSATZ” in die Console (oder einen Code-Chunk).</p>
+<p>Man könnte z.B. nachschlagen, was in dem Datensatz “TitanicSurvival” enthalten ist mit “?TitanicSurvival”.</p>
+<p>Eine Reihe von Übungsaufgaben basierend auf diesen Datensätzen sind in einem Zip-Ordner für Sie vorbereitet. Diesen können Sie <a href="q2_dataFiles/Markdowns/Pfingstuebungen.zip">hier</a> runterladen.</p>
+<p><br></p>
+</div>
 <div id="sitzung-7-mehrfaktorielle-anova" class="section level1">
 <h1><span class="header-section-number">7</span> Sitzung 7: Mehrfaktorielle ANOVA</h1>
 <ul>
@@ -1079,9 +1088,9 @@ body {
 <div id="zusätzliche-aufgaben-zum-eigenständigen-üben" class="section level2">
 <h2><span class="header-section-number">7.1</span> Zusätzliche Aufgaben zum eigenständigen Üben</h2>
 <ul>
-<li>Am Ende des Videos sprechen wir kurz über einen weiteren Datensatz zum eigenständigen Üben. Den findet ihr <a href="q2_dataFiles/CatsData.csv">hier</a>.</li>
-<li>Das R-Script dazu gibt es <a href="q2_html_pages/Sitzung7_Zusatz_KatzenMusterloesung.html">hier</a>.</li>
-<li>Das Markdown-File zum Script gibt es als ZIP-File <a href="q2_dataFiles/Sitzung7_Zusatz_KatzenMusterloesung.zip">hier</a></li>
+<li><p>Am Ende des Videos sprechen wir kurz über einen weiteren Datensatz zum eigenständigen Üben. Den findet ihr <a href="q2_dataFiles/CatsData.csv">hier</a>.</p></li>
+<li><p>Das Html-R-Script dazu gibt es <a href="q2_html_pages/Sitzung7_Zusatz_KatzenMusterloesung.html">hier</a>.</p></li>
+<li><p>Die Markdown-Files mit <em>Aufgaben</em> und <em>Loesung</em> gibt es als ZIP-File <a href="q2_dataFiles/Markdowns/Sitzung_07_Mehrfaktorielle_ANOVA.zip">hier</a>.</p></li>
 </ul>
 <p><br></p>
 </div>
@@ -1151,7 +1160,7 @@ body {
 <div id="zusatzaufgabe" class="section level2">
 <h2><span class="header-section-number">9.1</span> Zusatzaufgabe</h2>
 <p><br></p>
-<p>Ihr könnt den Katzendatensatz, der als Zusatz in Übung 7 besprochen angesprochen wurde, könnt ihr noch einmal eigenständig diese Art der Kontrastanalyse üben. In dem oben zu dieser Sitzung verlinkten ZIP-File sind die Daten (und auch ein Script) mit enthalten.</p>
+<p>Ihr könnt mit dem Katzendatensatz, der als Zusatz in Übung 7 verwendet wurde, noch einmal eigenständig diese Art der Kontrastanalyse üben. In dem oben zu dieser Sitzung verlinkten ZIP-File sind die Daten (und auch ein Script) mit enthalten.</p>
 <p>Helmert-Kontraste können anhand des Glastonbury-Datensatzes geübt werden, alle benötigten Dateien gibt es als zip-Ordner <a href="q2_dataFiles/Glastonbury_Helmert.zip">hier</a> und eine Lösung zum online ansehen <a href="q2_html_pages/Sitzung9_Kontraste_Helmert.html">hier</a>.</p>
 <p><br></p>
 </div>
