--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -1197,11 +1197,12 @@ body {
 </ul></li>
 </ul>
 <p><br></p>
-<div id="zusatzaufgabe-1" class="section level2">
-<h2><span class="header-section-number">10.1</span> Zusatzaufgabe</h2>
+<div id="zusatzaufgaben" class="section level2">
+<h2><span class="header-section-number">10.1</span> Zusatzaufgabe(n)</h2>
 <p><br></p>
-<p>In einer weiteren (zusätzlichen) Übungsaufgabe für euch geht es um die Wirksamkeit von Lernkompetenztrainings, die an verschiedenen Schulen untersucht werden soll.</p>
-<p>Alle benötigten Dateien gibt es als zip-Ordner <a href="q2_dataFiles/10_Multi_Level_school_training.zip">hier</a>.</p>
+<p>Aufgaben zum eigenständigen Üben:</p>
+<p>In einer weiteren Übungsaufgabe für euch geht es um die Wirksamkeit von Lernkompetenztrainings, die an verschiedenen Schulen untersucht werden soll. Alle benötigten Dateien gibt es als zip-Ordner <a href="q2_dataFiles/Markdowns/Sitzung_10_Multi_Level_school_training">hier</a>.</p>
+<p>Außerdem ist <a href="q2_dataFiles/Markdowns/Sitzung_10_MultiLevel_Chicks.zip">hier</a> noch eine weitere Anwendungsillustration von Multi-Level-Analysen anhand des “ChickWeight”-Datensatzes, den Sie von den Pfingstaufgaben schon kennen. Dieser Fall ist interessanta, da auch <em>Messwiederholungen</em> (das Gewicht der Küken an den verschiedenen Tagen) berücksichtigt werden. Die Illustration richtet sich eng nach den “Mixed-effect models”-Kapiteln in einem Online-Buch, das sie hier finden: <a href="https://psych252.github.io/psych252book/linear-mixed-effects-models-1.html" class="uri">https://psych252.github.io/psych252book/linear-mixed-effects-models-1.html</a></p>
 <p><br></p>
 </div>
 </div>
