ggplot_tutorial_upload

--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -1055,6 +1055,12 @@ body {
 <p>Eine Reihe von Übungsaufgaben basierend auf diesen Datensätzen sind in einem Zip-Ordner für Sie vorbereitet. Diesen können Sie <a href="q2_dataFiles/Markdowns/Pfingstuebungen.zip">hier</a> runterladen.</p>
 <p><br></p>
 </div>
+<div id="kurze-einführung-in-ggplot2" class="section level1 unnumbered">
+<h1>Kurze Einführung in ggplot2</h1>
+<p>Ein sehr gutes Paket zum Erstellen von Abbildungen ist “ggplot2”. Eine gute Übersicht gibt es hier: <a href="https://ggplot2-book.org/introduction.html" class="uri">https://ggplot2-book.org/introduction.html</a></p>
+<p>Für die Zusatzübung zu ggplot gibt es ein Markdown-Script, das <a href="q2_dataFiles/Markdowns/ggplot_einfuehrung.zip">hier</a> heruntergeladen werden kann.</p>
+<p><br></p>
+</div>
 <div id="sitzung-7-mehrfaktorielle-anova" class="section level1">
 <h1><span class="header-section-number">7</span> Sitzung 7: Mehrfaktorielle ANOVA</h1>
 <ul>
