update: new contrasts

--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -1453,9 +1453,18 @@ class="uri">https://psych252.github.io/psych252book/linear-mixed-effects-models-
 <p><br></p>
 </div>
 </div>
-<div id="zusätzliche-übungsaufgaben-gemischte-themen"
+<div id="sitzung-11-wiederholung-und-vertiefung-kontraste"
 class="section level1" number="11">
-<h1><span class="header-section-number">11</span> Zusätzliche
+<h1><span class="header-section-number">11</span> Sitzung 11:
+Wiederholung und Vertiefung Kontraste</h1>
+<p>Vor der Klausur wollten Sie noch einmal das Thema “Kontraste”
+wiederholen und vertiefen. Ein Zip-Ordner mit Aufgaben dazu gibt es <a
+href="q2_dataFiles/Markdowns/Kontraste_one_more_time_aufgaben.zip">hier</a>.</p>
+<p>Die Lösungen folden dann später <a href="">hier</a>.</p>
+</div>
+<div id="zusätzliche-übungsaufgaben-gemischte-themen"
+class="section level1" number="12">
+<h1><span class="header-section-number">12</span> Zusätzliche
 Übungsaufgaben (gemischte Themen)</h1>
 <p>…gibt es als zip-folder <a
 href="q2_dataFiles/Uebungsaufgaben.zip">hier</a></p>
