--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -1460,7 +1460,8 @@ Wiederholung und Vertiefung Kontraste</h1>
 <p>Vor der Klausur wollten Sie noch einmal das Thema “Kontraste”
 wiederholen und vertiefen. Ein Zip-Ordner mit Aufgaben dazu gibt es <a
 href="q2_dataFiles/Markdowns/Kontraste_one_more_time_aufgaben.zip">hier</a>.</p>
-<p>Die Lösungen folden dann später <a href="">hier</a>.</p>
+<p>Die Lösungen folden dann später <a
+href="q2_dataFiles/Markdowns/Kontraste_one_more_time_loesung.zip">hier</a>.</p>
 </div>
 <div id="zusätzliche-übungsaufgaben-gemischte-themen"
 class="section level1" number="12">
